# Rectifex-Analyzer-Pro-Score

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
packaging/flatpak/: de.rectifex.AnalyzerProScore.yml
