[tool.poetry]
name = "rectifex-analyzer-backend"
version = "0.1.0"
description = "Backend for Rectifex Analyzer Pro-Score"
authors = ["AI Agent"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.0.3"
ujson = "^5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
